plugins {
    id 'java'
}

group 'eu.scattering'
version '1.0-SNAPSHOT'

sourceCompatibility = 21
targetCompatibility = 21

java {
    modularity.inferModulePath = true
}

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation project(':eu.scattering.core.design')
    implementation project(':eu.scattering.core.impl')
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0-M1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0-M1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0-M1'
    testImplementation 'org.assertj:assertj-core:3.17.2'
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'idea'

    group 'eu.scattering'
    version '1.0-SNAPSHOT'

    sourceCompatibility = 21
    targetCompatibility = 21

    java {
        modularity.inferModulePath = true
    }

    repositories {
        mavenCentral()
    }
}

